compiler/test/type_check/bad_int_width.c2po
INPUT
    i0: int;

FTSPEC
    i0 < 2147483648; -- 2^31